# MPRT

./: .hgignore  CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Bawls/: CMakeLists.txt  main.cpp
src/apps/C3_ASimpleRayTracer/: CMakeLists.txt  main.cpp
src/apps/Ch4_BlinnPhongRT/: CMakeLists.txt  main.cpp
src/apps/ImageTest/: CMakeLists.txt  main.cpp
src/apps/MathematicTests/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/Geometry/: CMakeLists.txt  Group.cpp  Group.h  Ray.h  Sphere.cpp  Sphere.h  Surface.h  Triangle.cpp  Triangle.h
src/libs/Tools/: AbstractVec3.cpp  AbstractVec3.h  CMakeLists.txt  Frame.cpp  Frame.h  Image.cpp  Image.h  Light.h  Material.h  OrthonormalBasis.cpp  OrthonormalBasis.h  Rgb.cpp  Rgb.h  Sampler.cpp  Sampler.h  Vec2.h  Vec3.h  VecTmp.h  mprt.h
src/libs/TracingTools/: CMakeLists.txt  Camera.cpp  Camera.h  Scene.h
